adds mobile and tablet version

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -6,50 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HW08</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div class="masthead-wrapper">
         <div class="promo-container">
             <header class="masthead">
-                <logo>URLAUBSGLÜCK</logo>
                 <div class="login">
-                    <span class="log in">Log In</span>
-                    <span class="sign up">Sign up</span>
+                    <a href="#" class="log-in">Log In</a>
+                    <a href="#" class="sign-up">Sign up</a>
                 </div>
+                <logo><a href="#">URLAUBSGLÜCK</a></logo>
             </header>
             <section class="promo">
                 <h1 class="promo-title">Share your holiday dreams</h1>
                 <p class="promo-subtitle">And find the perfect partner to fullfill it</p>
-                <a href="" class="promo-btn">Find your holiday partner</a>
+                <a href="#" class="promo-btn">Find your holiday partner</a>
             </section>
         </div>
     </div>
     <div class="people-wrapper">
         <div class="people-container">
             <h3 class="people-title">Meet a partner for your best holiday</h3>
-            <div class="people-card">
-                <img src="" alt="" class="people-photo">
-                <span class="people-name">Bradley Hunter</span>
+            <ul class="card-container">
+            <li class="people-card">
+                <img src="/img/hunter.png" alt="" class="people-photo">
+                <h3 class="people-name">Bradley Hunter</h3>
                 <p class="people-about">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
-            <div class="people-card">
-                <img src="" alt="" class="people-photo">
-                <span class="people-name">Heather Walker</span>
+            </li>
+            <li class="people-card">
+                <img src="/img/marsha.png" alt="" class="people-photo">
+                <h3 class="people-name">Heather Walker</h3>
                 <p class="people-about">I'm a happy person that loves cats and climbing on mountains.
                 </p>
-            </div>
-            <div class="people-card">
-                <img src="" alt="" class="people-photo">
-                <span class="people-name">Lucas Marsha</span>
+            </li>
+            <li class="people-card">
+                <img src="/img/walker.png" alt="" class="people-photo">
+                <h3 class="people-name">Lucas Marsha</h3>
                 <p class="people-about">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
                 </p>
-            </div>
-            <div class="people-card">
-                <img src="" alt="" class="people-photo">
-                <span class="people-name">Bradley Hunter</span>
+            </li>
+            <li class="people-card">
+                <img src="/img/hunter2.png" alt="" class="people-photo">
+                <h3 class="people-name">Bradley Hunter</h3>
                 <p class="people-about">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
+            </li>
+        </ul>
+            <a href="#" class="people-btn">See other partners</a>
         </div>
     </div>
 </body>
