--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -31,24 +31,24 @@
             <h3 class="people-title">Meet a partner for your best holiday</h3>
             <ul class="card-container">
             <li class="people-card">
-                <img src="/img/hunter.png" alt="" class="people-photo">
+                <img src="img/hunter.png" alt="" class="people-photo">
                 <h3 class="people-name">Bradley Hunter</h3>
                 <p class="people-about">Based in Chicago. I love playing tennis and loud music.</p>
             </li>
             <li class="people-card">
-                <img src="/img/marsha.png" alt="" class="people-photo">
+                <img src="img/marsha.png" alt="" class="people-photo">
                 <h3 class="people-name">Heather Walker</h3>
                 <p class="people-about">I'm a happy person that loves cats and climbing on mountains.
                 </p>
             </li>
             <li class="people-card">
-                <img src="/img/walker.png" alt="" class="people-photo">
+                <img src="img/walker.png" alt="" class="people-photo">
                 <h3 class="people-name">Lucas Marsha</h3>
                 <p class="people-about">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
                 </p>
             </li>
             <li class="people-card">
-                <img src="/img/hunter2.png" alt="" class="people-photo">
+                <img src="img/hunter2.png" alt="" class="people-photo">
                 <h3 class="people-name">Bradley Hunter</h3>
                 <p class="people-about">Based in Chicago. I love playing tennis and loud music.</p>
             </li>
