adds final version

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -17,10 +17,12 @@
                     <a href="#" class="log-in">Log In</a>
                     <a href="#" class="sign-up">Sign up</a>
                 </div>
-                <logo><a href="#">URLAUBSGLÜCK</a></logo>
+                <h1 class="logo">
+                    <a href="#">URLAUBSGLÜCK</a>
+                </h1>
             </header>
             <section class="promo">
-                <h1 class="promo-title">Share your holiday dreams</h1>
+                <h2 class="promo-title">Share your holiday dreams</h2>
                 <p class="promo-subtitle">And find the perfect partner to fullfill it</p>
                 <a href="#" class="promo-btn">Find your holiday partner</a>
             </section>
@@ -30,30 +32,34 @@
         <div class="people-container">
             <h3 class="people-title">Meet a partner for your best holiday</h3>
             <ul class="card-container">
-            <li class="people-card">
-                <img src="img/hunter.png" alt="" class="people-photo">
-                <h3 class="people-name">Bradley Hunter</h3>
-                <p class="people-about">Based in Chicago. I love playing tennis and loud music.</p>
-            </li>
-            <li class="people-card">
-                <img src="img/marsha.png" alt="" class="people-photo">
-                <h3 class="people-name">Heather Walker</h3>
-                <p class="people-about">I'm a happy person that loves cats and climbing on mountains.
-                </p>
-            </li>
-            <li class="people-card">
-                <img src="img/walker.png" alt="" class="people-photo">
-                <h3 class="people-name">Lucas Marsha</h3>
-                <p class="people-about">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
-                </p>
-            </li>
-            <li class="people-card">
-                <img src="img/hunter2.png" alt="" class="people-photo">
-                <h3 class="people-name">Bradley Hunter</h3>
-                <p class="people-about">Based in Chicago. I love playing tennis and loud music.</p>
-            </li>
-        </ul>
-            <a href="#" class="people-btn">See other partners</a>
+                <li class="people-card">
+                    <img src="img/hunter.png" class="people-photo" srcset="img/hunter.png 120w,
+                    img/hunter@2x.jpg 240w" alt="man-hunter">
+                    <h3 class="people-name ">Bradley Hunter</h3>
+                    <p class="people-about ">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+                <li class="people-card ">
+                    <img src="img/marsha.png " class="people-photo" srcset="img/marsha.png 121w,
+                    img/marsha@2x.jpg 242w" alt="man-marsha">
+                    <h3 class="people-name ">Heather Walker</h3>
+                    <p class="people-about ">I'm a happy person that loves cats and climbing on mountains.
+                    </p>
+                </li>
+                <li class="people-card ">
+                    <img src="img/walker.png " class="people-photo " srcset="img/walker.png 121w,
+                    img/walker@2x.jpg 242w" alt="man-walker">
+                    <h3 class="people-name ">Lucas Marsha</h3>
+                    <p class="people-about ">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
+                    </p>
+                </li>
+                <li class="people-card ">
+                    <img src="img/hunter2.png " class="people-photo " srcset="img/hunter2.png 121w,
+                    img/hunter2@2x.jpg 242w" alt="man-hunter">
+                    <h3 class="people-name ">Bradley Hunter</h3>
+                    <p class="people-about ">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+            </ul>
+            <a href="# " class="people-btn ">See other partners</a>
         </div>
     </div>
 </body>
