--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -57,9 +57,12 @@
                                 <div class="row card-container justify-content-center">
                                     <div class="col-8 col-md-5 col-lg-3">
                                         <div class="people-card">
-                                            <img src="img/hunter.png" class="people-photo" srcset="img/hunter.png 120w,
+                                            <div class="people-img">
+                                                <img src="img/hunter.png" class="people-photo" srcset="img/hunter.png 120w,
                                         img/hunter@2x.jpg 240w" alt="man-hunter">
-                                            <i title="tv-icon" class="icon-for-hunter"></i>
+                                                <i title="tv-icon" class="icon-for-hunter">
+                                                </i>
+                                            </div>
                                             <h3 class="people-name ">Bradley Hunter</h3>
                                             <p class="people-about ">Based in Chicago. I love playing tennis and loud music.</p>
 
@@ -67,9 +70,11 @@
                                     </div>
                                     <div class="col-8 col-md-5 col-lg-3">
                                         <div class="people-card">
-                                            <img src="img/marsha.png " class="people-photo" srcset="img/marsha.png 121w,
+                                            <div class="people-img">
+                                                <img src="img/marsha.png " class="people-photo" srcset="img/marsha.png 121w,
                                             img/marsha@2x.jpg 242w" alt="man-marsha">
-                                            <i title="icon-tea" class="icon-for-marsha"></i>
+                                                <i title="icon-tea" class="icon-for-marsha"></i>
+                                            </div>
                                             <h3 class="people-name ">Heather Walker</h3>
                                             <p class="people-about ">I'm a happy person that loves cats and climbing on mountains.
                                             </p>
@@ -77,9 +82,11 @@
                                     </div>
                                     <div class="col-8 col-md-5 col-lg-3">
                                         <div class="people-card">
-                                            <img src="img/walker.png " class="people-photo " srcset="img/walker.png 121w,
+                                            <div class="people-img">
+                                                <img src="img/walker.png " class="people-photo " srcset="img/walker.png 121w,
                                             img/walker@2x.jpg 242w" alt="man-walker">
-                                            <i title="icon-lab" class="icon-for-walker"></i>
+                                                <i title="icon-lab" class="icon-for-walker"></i>
+                                            </div>
                                             <h3 class="people-name ">Lucas Marsha</h3>
                                             <p class="people-about ">I get my inspiration from nature and objects around me. I have a passion to colours,
                                                 typography and skateboards.</p>
@@ -87,9 +94,11 @@
                                     </div>
                                     <div class="col-8 col-md-5 col-lg-3">
                                         <div class="people-card">
-                                            <img src="img/hunter2.png " class="people-photo " srcset="img/hunter2.png 121w,
+                                            <div class="people-img">
+                                                <img src="img/hunter2.png " class="people-photo " srcset="img/hunter2.png 121w,
                                             img/hunter2@2x.jpg 242w" alt="man-hunter">
-                                            <i title="icon-airplane" class="icon-for-hunter2"></i>
+                                                <i title="icon-airplane" class="icon-for-hunter2"></i>
+                                            </div>
                                             <h3 class="people-name ">Bradley Hunter</h3>
                                             <p class="people-about ">Based in Chicago. I love playing tennis and loud music.</p>
                                         </div>
