--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -8,6 +8,7 @@
     <title>HW-09</title>
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/favicon.png" type="img/png">
 </head>
 
 <body>
