adds main footer

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -244,6 +244,20 @@
             </ul>
         </div>
     </div>
+    <div class="footer-wrapper">
+        <footer class="footer">
+            <p class="license">© 2016 MoGo free PSD template by
+                <span class="license__word--red">Laaqiq</span>
+            </p>
+            <form action="" class="form-subscribe">
+                <input type="email" name="email" required placeholder="Your Email...">
+                <button type="submit" class="btn-subcribe">
+                    <span>subcribe</span>
+                </button>
+            </form>
+
+        </footer>
+    </div>
 </body>
 
 </html>
