adds svg service icons

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -120,7 +120,7 @@
         </div>
     </div>
     <div class="team-wrapper">
-        <div class="container">
+        <div class="container container--big-indent">
             <div class="section-header">
                 <p class="section-header__caption">Who we are</p>
                 <h3 class="section-header__title">meet our team</h3>
@@ -133,8 +133,8 @@
                     <div class="team-card">
                         <div class="team-card__content">
                             <picture>
-                                <source src="img/photo-dix.png,
-                                        img/photo-dix@2.jpg 2x">
+                                <source srcset="img/photo-dix.png,
+                                        img/photo-dix@2x.jpg 2x">
                                 <img src="img/photo-dix.png" alt="team member">
                             </picture>
                             <div class="team-card__icons">
@@ -170,8 +170,8 @@
                     <div class="team-card">
                         <div class="team-card__content">
                             <picture>
-                                <source src="img/photo-campbell.png,
-                                                img/photo-campbell@2.jpg 2x">
+                                <source srcset="img/photo-campbell.png,
+                                                img/photo-campbell@2x.jpg 2x">
                                 <img src="img/photo-campbell.png" alt="team member">
                             </picture>
                             <div class="team-card__icons">
@@ -208,8 +208,8 @@
                     <div class="team-card">
                         <div class="team-card__content">
                             <picture>
-                                <source src="img/photo-fertig.png,
-                                                        img/photo-fertig@2.jpg 2x">
+                                <source srcset="img/photo-fertig.png,
+                                                        img/photo-fertig@2x.jpg 2x">
                                 <img src="img/photo-fertig.png" alt="team member">
                             </picture>
                             <div class="team-card__icons">
@@ -246,10 +246,10 @@
     </div>
     <div class="footer-wrapper">
         <footer class="footer">
-            <p class="license">© 2016 MoGo free PSD template by
+            <p class="license"> 2016 MoGo free PSD template by
                 <span class="license__word--red">Laaqiq</span>
             </p>
-            <form action="" class="form-subscribe">
+            <form action="#" class="form-subscribe">
                 <input type="email" name="email" required placeholder="Your Email...">
                 <button type="submit" class="btn-subcribe">
                     <span>subcribe</span>
