adds final changes

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -15,52 +15,56 @@
         <div class="promo-container">
             <header class="masthead">
                 <a href="#" class="logo header__logo">MoGo</a>
-                <ul class="menu header__menu">
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">about</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">service</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">work</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">blog</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">contact</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">
-                            <svg class="menu__icons" width="20" height="20">
-                                <use href="img/icons/symbol-defs.svg#icon-buy"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#">
-                            <svg class="menu__icons" width="20" height="20">
-                                <use href="img/icons/symbol-defs.svg#icon-zoom"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                <div class="menu">
+                    <ul class="site-menu header__menu">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">about</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">service</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">work</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">blog</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">contact</a>
+                        </li>
+                    </ul>
+                    <ul class="user-menu">
+                        <li class="menu__item">
+                            <a href="#">
+                                <svg class="menu__icons" width="20" height="20">
+                                    <use href="img/icons/symbol-defs.svg#icon-buy"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">
+                                <svg class="menu__icons" width="20" height="20">
+                                    <use href="img/icons/symbol-defs.svg#icon-zoom"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </header>
-            <div class="promo">
+            <section class="promo">
                 <p class="promo__caption">Creative Template</p>
-                <h3 class="promo__title">Welcome to MoGo</h3>
-                <a href="" class="btn promo__btn">Learn more</a>
-            </div>
+                <h2 class="promo__title">Welcome to MoGo</h2>
+                <a href="#" class="btn promo__btn">Learn more</a>
+            </section>
         </div>
     </div>
 
     <div class="services-wrapper">
-        <div class="container">
-            <div class="section-header">
+        <section class="container">
+            <header class="section-header">
                 <p class="section-header__caption">We work with</p>
                 <h3 class="section-header__title">amazing services</h3>
-            </div>
+            </header>
             <ul class="service-cards">
                 <li class="service-cards__item">
                     <div class="service-cards__box">
@@ -117,7 +121,7 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </section>
     </div>
     <div class="team-wrapper">
         <div class="container container--big-indent">
