scss divides into the parts

--- a/html-css/module-11/src/index.html
+++ b/html-css/module-11/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HW11</title>
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.min.css">
 </head>
 
@@ -26,7 +27,7 @@
               <a href="#" class="menu-link">work</a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu__link">blog</a>
+              <a href="#" class="menu-link">blog</a>
             </li>
             <li class="menu-item">
               <a href="#" class="menu-link">contact</a>
@@ -249,7 +250,7 @@
   <div class="footer-wrapper">
     <footer class="footer">
       <p class="license"> 2016 MoGo free PSD template by
-        <span class="license__word--red">Laaqiq</span>
+        <span class="license-word--red">Laaqiq</span>
       </p>
       <form action="#" class="form-subscribe">
         <input type="email" name="email" required placeholder="Your Email...">
